# WEBSERV

./: .Dockerfile.swp  .TODO  .favorites.json  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  aa.html  ca_marche_input  corr.html  file.html  info.2.html  info.2.php  input  magic_git  makefile.debug  ok  py-cgi  r.sh  readme.md  setup_files.sh  test.cpp  test_ai.cpp  webserv.config  webserv_macEcole_FAIL.config  webserv_macm1.config  webserv_macm1_TEST.config
assets/: clean_setup_files.sh  setup_files.sh
assets/HTML_Base/: about.html  index.html
assets/HTML_for_locationtest/server/: about.html  index.html  index.php
assets/HTML_for_locationtest/server/0/: .cgi_info.php.swp  about.html  cgi_info.php  delete.js  helloworld.py  index.html  otherfile.html  php_exiter.php
assets/HTML_for_locationtest/server/0/delete_me_fail/: aFile.html
assets/HTML_for_locationtest/server/1/: about.html  index.html
assets/HTML_for_locationtest/server/2/: about.html  calcul.py  index.html  post_form.html  post_upload.html  upload.php  welcome.php  welcome.py  welcome_get.php  welcome_get.py
assets/HTML_for_locationtest/server/3/: index.html  phptest.html
assets/HTML_for_locationtest/server/3 with spaces/: about the page.html  index.html
assets/HTML_for_locationtest/server/3/A/: fileA_0.html
assets/HTML_for_locationtest/server/3/B/: fileB_0.html
assets/HTML_for_locationtest/server/3/C/: fileC_0.html
assets/HTML_for_locationtest/server/err_pages/: err_500.html  err_504.html
assets/HTML_for_locationtest/server/wordpress_like/: index.php  page1.php  page2.php
assets/HTML_for_locationtest/server_test_index/: index.html
assets/HTML_for_locationtest/server_test_index/A/: index.html
assets/HTML_for_locationtest/server_test_index/B/: index.html
assets/HTML_pages/: index.html
assets/Server_data/server_eval/: index.html  post_form.html  upload_form.html
assets/Server_data/server_eval/css/: style.css
assets/Server_data/server_eval/err_pages/: err_404.html  err_501.html  err_502.html  err_503.html
assets/Server_data/server_eval/php/: get_form_result.php  phpinfos.php  post_form_result.php  upload.php
assets/Server_data/server_eval/python/: welcome_get.py
assets/conf_MAC/: calixte.conf  calixte_mac42.conf  calixte_macbookpro.conf  locationPostMethod.conf  locationTest.conf  muti_locations_servers.conf  server_test_index  test_autoindex.conf  test_body_limit.conf  test_redirect.conf  test_server_selection.conf  test_upload.conf  webserv_macEcole.config  webserv_macm1_TEST.config
assets/conf_evaluation/: FAIL_same_servers.conf  OK_server_test42.conf  OK_simple_no_locations.conf  OK_test_autoindex.conf  OK_test_muti_locations_servers.conf  OK_test_redirect.conf  OK_test_upload.conf
assets/conf_types/: types_mime  types_mime.conf
siege-4.1.1/: Makefile  PLATFORM  config.status  libtool
siege-4.1.1/doc/: Makefile
siege-4.1.1/html/: Makefile
siege-4.1.1/include/: Makefile
siege-4.1.1/include/joedog/: Makefile  path.h
siege-4.1.1/src/: Makefile  siege
siege-4.1.1/utils/: Makefile
src/: Constants.hpp  Server.cpp  Server.hpp  main.cpp  main_brian.cpp
src/CGI/: CGI.cpp  CGI.hpp
src/Config/: ConfigParser.cpp  ConfigParser.hpp  Server.cpp  Server.hpp  ServerBlock.cpp  ServerBlock.hpp  config.cpp  config.hpp
src/Config/Directives/: Cgi.cpp  Cgi.hpp  ClientMaxBodySize.cpp  ClientMaxBodySize.hpp  ErrorPage.cpp  ErrorPage.hpp  Index.cpp  Index.hpp  Listen.cpp  Listen.hpp  Location.cpp  Location.hpp  Methods.cpp  Methods.hpp  Redirect.cpp  Redirect.hpp  Root.cpp  Root.hpp  ServerBlock.hpp  ServerName.cpp  ServerName.hpp  Upload.cpp  Upload.hpp
src/Config/Structure/: Bloc.hpp  Line.cpp  Line.hpp
src/HTTP/: Request.cpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  Status.cpp  Status.hpp
src/HTTP/Headers/: Header.cpp  Header.hpp  HeaderParser.hpp  Headers.cpp  Headers.hpp
src/HTTP/Request/: Chunk.cpp  Chunk.hpp  Request.cpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestLine.cpp  RequestLine.hpp  RequestParser.cpp  RequestParser.hpp
src/HTTP/Request/RequestTarget/: OriginForm.cpp  OriginForm.hpp  Scheme.cpp  Scheme.hpp  Segment.cpp  Segment.hpp  Target.hpp
src/HTTP/Request/RequestUtils/: Charset.cpp  Charset.hpp  Chunk.cpp  Path.cpp  Path.hpp  RequestLine.hpp  Target.hpp
src/HTTP/Response/: Autoindex.cpp  Autoindex.hpp  Response.cpp  Response.hpp  ResponseHandler.cpp  ResponseHandler.hpp
src/HTTP/Response/ResponseUtils/: A_Method.hpp  File.cpp  File.hpp  ResponseHeader.cpp  ResponseHeader.hpp  TypesMime.cpp  TypesMime.hpp
src/Network/: Core.cpp  Core.hpp  EventManager.cpp  EventManager.hpp  EventsManager.cpp  EventsManager.hpp  Poll.cpp  Poll.hpp  PollFd.cpp  PollFd.hpp  ServerPool.cpp  ServerPool.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp
src/parser/: Error.cpp  Error.hpp  Parser.hpp  Result.hpp  combinators.hpp  slice.hpp
src/parser/bytes/: Alpha.cpp  Alpha.hpp  Char.cpp  Char.hpp  Digit.cpp  Digit.hpp  Eof.cpp  Eof.hpp  HexChar.cpp  HexChar.hpp  ITag.cpp  Match.cpp  Match.hpp  OneOf.cpp  OneOf.hpp  Tag.cpp  Tag.hpp  TakeExact.cpp  TakeExact.hpp  TakeUntilMatch.hpp  TakeWhile.cpp  TakeWith.hpp
src/parser/combinators/: Map.hpp  Opt.hpp  Wrap.hpp
src/parser/sequence/: Many.hpp  Separated.hpp  Sequence.hpp
src/parsing/: Methods.cpp  Methods.hpp  Tokens.cpp  Tokens.hpp
src/utils/: Logger.cpp  Logger.hpp  Timer.hpp
srcs/: .my_site.swp  .phpmyadmin.swp  .setup.sql.swp  .supervisor.conf.swp  .wordpress.swp  .wp-config.php.swp  01_start.sh  doodle  ft_server_setup.sql  location_directive  my_site  nginx-selfsigned.crt  nginx-selfsigned.key  packages_script.sh  phpmyadmin  script.sh  sql_script.sh  start.sh  start_services.sh  supervisor.conf  wordpress
srcs/conf_files/: wordpress
srcs/scripts/: packages_script.sh
tester/: load_stress_test.sh  r.sh  setup_files.sh  telnet_req.sh
tester/read_file/: main.cpp  setup_file.sh  test
volume/: index.php
(+6 files in other folders)
